--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,15 @@ server:
   servlet:
     context-path: /
 spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/demo?useSSL=false
+    username: root
+    password: 123456
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 打印sql
   mvc:
     static-path-pattern: "/static/**" # 静态访问资源路径
     static-locations: "classpath:/static/,/upload/" # 静态加载资源路径
@@ -13,8 +22,8 @@ spring:
       exclude: "static/**"
 servlet:
   multipart:
-    max-file-size: 10MB
-    max-request-size: 10MB
+    max-file-size: 100MB # 上传文件大小限制
+    max-request-size: 100MB # 上传请求大小限制
 
 springdoc:
   swagger-ui:
@@ -27,9 +36,4 @@ springdoc:
     - group: "default"
       paths-to-match: "/**"
       packages-to-scan: com
-#knife4j:
-#  enable: true
-#  setting:
-#    language: zh_cn
-#    swagger-model-name: "实体类"
 
