--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ server:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 打印sql
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true # 驼峰命名
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -37,4 +41,7 @@ springdoc:
     - group: "default"
       paths-to-match: "/**"
       packages-to-scan: com
-
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
